--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -11,6 +11,7 @@
     <groupId>fr.univcotedazur.simpletcfs</groupId>
     <artifactId>cli</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>cli</name>
     <description>cli</description>
     <properties>
