wait-for-it.sh, docker-compose simplified, dockerfile update
wait-for-it.sh script moved into cli folder (and image). Docker-compose
simplified to use default network and override cli entrypoint. Dockerfile updated (label and
wait-for-it)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 # Traditional docker build with a Dockerfile
 
-FROM adoptopenjdk/openjdk11:alpine-jre
+FROM openjdk:11-slim-bullseye
 
-MAINTAINER Philippe Collet (philippe.collet@univ-cotedazur.fr)
+LABEL org.opencontainers.image.authors="Philippe Collet philippe.collet@univ-cotedazur.fr"
 
 ARG JAR_FILE
 
