--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,18 @@ version: '3'
 services:
 
   # The Cookie Factory backend in SpringBoot
-   tcf_server:
+   tcf-server:
     image: pcollet/tcf-spring-backend
     container_name: server
-    networks:
-      mvp_net:
-        ipv4_address: 172.28.0.2
 
   # A simple java CLI
-   tcf_cli:
+   tcf-cli:
     image: pcollet/tcf-spring-cli
     container_name: cli
     environment:
-      - SERVER_URL=http://172.28.0.2:8080
-    command: ["./wait-for-it.sh", "tcf_server:8080", "--", "java", "-jar", "/app.jar", "--tcf.host.baseurl=$SERVER_URL"]
+      - SERVER_WITH_PORT=tcf-server:8080
+    entrypoint: "bash -c '/wait-for-it.sh $${SERVER_WITH_PORT} -- java -jar /app.jar --tcf.host.baseurl=http://$${SERVER_WITH_PORT}'"
     depends_on:
-      - tcf_server
+      - tcf-server
     stdin_open: true
     tty: true
-    networks:
-      mvp_net:
-
-# Network setup (ipam setup to enable ipv4 addresses)
-networks:
-   mvp_net:
-     ipam:
-       driver: default
-       config:
-         - subnet: 172.28.0.0/16
