--- a/.github/workflows/github-actions-coverage.yml
+++ b/.github/workflows/github-actions-coverage.yml
@@ -1,30 +1,20 @@
-name: Backend
+name: Coverage
 
 on:
   push:
     branches:
-      - feature/**
+      - main/**
     paths:
       - backend/**
+      - cli/**
 
 jobs:
+  SetUp:
+    - uses: ./.github/actions/workflows/CommonTask
   Backend:
     runs-on: ubuntu-20.04
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - name: Install java 11 (Temurin)
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      - name: Set up Maven 3.8.4
-        uses: stCarolas/setup-maven@v4.2
-        with:
-          maven-version: 3.8.4
-      - name: Test the backend
-        working-directory: ./backend
-        run: mvn clean test
+      - uses: SetUp
       - name: Generate the backend coverage badge
         uses: cicirello/jacoco-badge-generator@v2
         with:
