--- a/.github/workflows/github-action-feature-cli.yml
+++ b/.github/workflows/github-action-feature-cli.yml
@@ -11,6 +11,8 @@ jobs:
   UnitTests:
     runs-on: ubuntu-20.04
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
       - uses: ./.github/actions/common-tasks
       - name: Set up Maven 3.8.4
         uses: stCarolas/setup-maven@v4.2
