--- a/.github/workflows/github-actions-feature-back.yml
+++ b/.github/workflows/github-actions-feature-back.yml
@@ -11,7 +11,9 @@ jobs:
   UnitTests:
     runs-on: ubuntu-20.04
     steps:
-      - uses: ./.github/workflows/github-action-common-tasks
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - uses: ./.github/actions/common-tasks
       - name: Set up Maven 3.8.4
         uses: stCarolas/setup-maven@v4.2
         with:
