Basic logger + AOP logger on controllers + setup and updated gitignore

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency> <!-- AOP (Aspect-Oriented Programming) support -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
